# backend

./: CONTRIBUTING.md  README.md  blueprint_data_example  context.py  decorators.py  engine.py  loader.py  main.py  node_registry.json  parameter.py  plugin_hot_reload.py  pyproject.toml  registry.py  server.py  sort.py  test_blueprint.json  test_engine.py  test_mlp.py  test_mlp_blueprint.json  test_refactor.py  test_ws_client.py  util.py  utils.py  ws_server.py  代码修改文档.md  分类方案.txt  前端需要的nodeRegistry示例格式.js  开发日志.md  开发目标.txt  文件与具体逻辑.txt  框架记录.txt  项目架构.txt  项目解读文档.md
.claude/: settings.local.json
NOTICE/: 文件与具体逻辑.txt  节点定义.txt
nodes/: __init__.py  activation.py  activations.py  attention.py  base.py  example.py  layers.py  loss.py  losses.py  math.py  normalization.py  shape.py  transform.py
params/: __init__.py  bool.py  enum.py  float.py  int.py  list.py  str.py
tests/: test_loader.py  test_sort.py
utils/: __init__.py  graph.py  safe.py  serialization.py  tensor.py  validation.py
