[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "websockets>=16.0",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

